--- a/learntrust-lms-frontend/src/app/shared/navbar/navbar.css
+++ b/learntrust-lms-frontend/src/app/shared/navbar/navbar.css
@@ -12,6 +12,9 @@
   top: 0;
   z-index: 1000;
   width: 100%;
+  box-sizing: border-box;  
+  overflow: hidden;       
+  max-width: 100vw;
 }
 
 /* LEFT */
